@@ -1,3 +1,7 @@
+Sat Feb 16 01:27:29 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gconf/gconftool.c (read_value_type): fix typo in reading args.
+
 2002-02-14  Dave Camp  <dave@ximian.com>
 
 	* gconf/gconf.c: (gconf_string_to_enum): Use g_ascii_strcasecmp
